--- a/test/QamarKitoblar.UnitTest/QamarKitoblar.UnitTest.csproj
+++ b/test/QamarKitoblar.UnitTest/QamarKitoblar.UnitTest.csproj
@@ -22,4 +22,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\src\QamarKitoblar.WebApi\QamarKitoblar.WebApi.csproj" />
+  </ItemGroup>
+
 </Project>
