--- a/src/QamarKitoblar.DataAccess/QamarKitoblar.DataAccess.csproj
+++ b/src/QamarKitoblar.DataAccess/QamarKitoblar.DataAccess.csproj
@@ -6,4 +6,14 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Interfaces\" />
+    <Folder Include="ViewModels\" />
+    <Folder Include="Repositories\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\QamarKitoblar.Domain\QamarKitoblar.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
