--- a/src/QamarKitoblar.DataAccess/QamarKitoblar.DataAccess.csproj
+++ b/src/QamarKitoblar.DataAccess/QamarKitoblar.DataAccess.csproj
@@ -7,13 +7,23 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Interfaces\" />
-    <Folder Include="ViewModels\" />
-    <Folder Include="Repositories\" />
+    <Compile Remove="Common\Interfaces\NewFolder\**" />
+    <EmbeddedResource Remove="Common\Interfaces\NewFolder\**" />
+    <None Remove="Common\Interfaces\NewFolder\**" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Dapper" Version="2.0.143" />
+    <PackageReference Include="Npgsql" Version="7.0.4" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\QamarKitoblar.Domain\QamarKitoblar.Domain.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Repositories\Books\" />
+    <Folder Include="Repositories\Users\" />
   </ItemGroup>
 
 </Project>
