--- a/src/QamarKitoblar.WebApi/QamarKitoblar.WebApi.csproj
+++ b/src/QamarKitoblar.WebApi/QamarKitoblar.WebApi.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
@@ -12,15 +12,15 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Controllers\" />
     <Folder Include="Configurations\" />
     <Folder Include="Filters\" />
     <Folder Include="Middlewares\" />
-    <Folder Include="wwwroot\images\" />
-    <Folder Include="wwwroot\avatars\" />
-    <Folder Include="wwwroot\documents\" />
-    <Folder Include="wwwroot\audios\" />
-    <Folder Include="wwwroot\videos\" />
+    <Folder Include="wwwroot\media\images\" />
+    <Folder Include="wwwroot\media\avatars\" />
+    <Folder Include="wwwroot\media\documents\" />
+    <Folder Include="wwwroot\media\audios\" />
+    <Folder Include="wwwroot\media\" />
+    <Folder Include="wwwroot\media\videos\" />
   </ItemGroup>
 
   <ItemGroup>
