--- a/QamarKitoblar.Service/QamarKitoblar.Service.csproj
+++ b/QamarKitoblar.Service/QamarKitoblar.Service.csproj
@@ -14,6 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="FluentValidation" Version="11.6.0" />
     <PackageReference Include="Microsoft.AspNetCore.Http" Version="2.2.2" />
   </ItemGroup>
 
