--- a/src/QamarKitoblar.WebApi/appsettings.Development.json
+++ b/src/QamarKitoblar.WebApi/appsettings.Development.json
@@ -9,7 +9,7 @@
     "Sender": "4546",
     "Platform": "https://eskiz.uz/",
     "BaseURL": "https://notify.eskiz.uz",
-    "Email": "muhammadalirustamkulov160@gmail.com",
-    "Password": "AzzfnCFnu8Ncq1PK4Vxn5R8f27bA8At25ybtjJAs"
+    "Email": "javoergashev30@gmail.com",
+    "Password": "UibqiJMOvJNPkqnjtmRqNjHnPub3GzStV9aYOsWb"
   }
 }
