--- a/src/QamarKitoblar.WebApi/appsettings.Development.json
+++ b/src/QamarKitoblar.WebApi/appsettings.Development.json
@@ -5,6 +5,12 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "Jwt": {
+    "Issuer": "https://qamarkitoblar.uz",
+    "Audience": "QamarKitoblar",
+    "SecurityKey": "f04f6b5a-51b3-45f7-8826-c5e98fd5247d",
+    "Lifetime": 24
+  },
   "Sms": {
     "Sender": "4546",
     "Platform": "https://eskiz.uz/",
