--- a/src/QamarKitoblar.WebApi/appsettings.json
+++ b/src/QamarKitoblar.WebApi/appsettings.json
@@ -5,5 +5,18 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Jwt": {
+    "Issuer": "https://qamarkitoblar.uz",
+    "Audience": "QamarKitoblar",
+    "SecurityKey": "f04f6b5a-51b3-45f7-8826-c5e98fd5247d",
+    "Lifetime": 24
+  },
+  "Sms": {
+    "Sender": "4546",
+    "Platform": "https://eskiz.uz/",
+    "BaseURL": "https://notify.eskiz.uz",
+    "Email": "javoergashev30@gmail.com",
+    "Password": "UibqiJMOvJNPkqnjtmRqNjHnPub3GzStV9aYOsWb"
+  }
 }
