--- a/QamarKitoblar.Service/QamarKitoblar.Service.csproj
+++ b/QamarKitoblar.Service/QamarKitoblar.Service.csproj
@@ -13,6 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="12.0.1" />
     <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
     <PackageReference Include="FluentValidation" Version="11.6.0" />
     <PackageReference Include="Microsoft.AspNetCore.Http" Version="2.2.2" />
